--- a/node-server/package.json
+++ b/node-server/package.json
@@ -1,22 +1,25 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx nodemon index.js",
     "start": "node index.js"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@openai/realtime-api-beta": "github:openai/openai-realtime-api-beta",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "nodemon": "^3.1.10",
     "ws": "^8.18.0"
   },
-  "devDependencies": {},
-  "keywords": [],
-  "description": ""
+  "devDependencies": {}
 }
