--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "voice-agent-demo",
   "version": "1.0.0",
   "description": "Voice agent demo with Recall.ai and OpenAI",
+  "type": "module",
   "scripts": {
     "build": "cd node-server && npm install",
-    "start": "cd node-server && npm start"
+    "start": "node server.js"
   },
   "engines": {
     "node": ">=18.0.0"
